--- a/slides/css/theme/template/theme.scss
+++ b/slides/css/theme/template/theme.scss
@@ -120,14 +120,17 @@
 
 .reveal ul {
 	list-style-type: disc;
+	font-size: 0.75em;
 }
 
 .reveal ul ul {
 	list-style-type: square;
+	font-size: 0.75em;
 }
 
 .reveal ul ul ul {
 	list-style-type: circle;
+	font-size: 0.75em;
 }
 
 .reveal ul ul,
@@ -186,6 +189,7 @@
 	font-family: var(--r-code-font);
 	text-transform: none;
 	tab-size: 2;
+	color: cornflowerblue;
 }
 
 .reveal pre code {
