--- a/slides/css/theme/template/theme.scss
+++ b/slides/css/theme/template/theme.scss
@@ -105,6 +105,10 @@
 	font-style: italic;
 }
 
+.reveal li code {
+	color: greenyellow;
+}
+
 .reveal ol,
 .reveal dl,
 .reveal ul {
@@ -205,6 +209,7 @@
 
 .reveal .code-wrapper code {
 	white-space: pre;
+	font-size: 80%;
 }
 
 .reveal table {
